tests/snapshots/corpus__csv_handmade_semicolon.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
| a | b | c |
| --- | --- | --- |
| 1,5 | 2,5 | x |
| 3,0 | y | z |
--- stderr ---
