tests/snapshots/corpus__csv_handmade_utf16.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
| col1 | col2 |
| --- | --- |
| naïve | café |
| Αθήνα | 数据 |
--- stderr ---
