tests/snapshots/corpus__doc_handmade_blockstyle.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
Body before.
```
fn main() {
}
```
> A quotation.
Body after.
--- stderr ---
