tests/snapshots/corpus__doc_handmade_cyrillic.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
Привет, мир!
Второй абзац по-русски.
--- stderr ---
