tests/snapshots/corpus__docx_handmade_altpath.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== section 1 ==
# Relocated heading
Body found via rels[^1]
[^1]: A relocated footnote
--- stderr ---
