tests/snapshots/corpus__docx_handmade_blockstyle.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
Body before.
```
fn main() {
    println!("ok");
}
```
Body between.
> A quotation.
>
> Its second paragraph.
Body between.
> Word quote.
>
> Word intense quote.
Body between.
```
HTML preformatted line.
Inherits Source Code.
```
Body after.
--- stderr ---
