tests/snapshots/corpus__docx_handmade_manyrefs.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
Seventy references to one image follow.
--- stderr ---
